--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^5.1.8",
     "ant-design-vue": "^2.0.0-rc.3",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
